--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,5 +2,5 @@
 
 <h1>Contact</h1>
 <p>
-	Here you can access links to contact us:
+	Contact Ruby on Rails Tutorial about the sample app at the <a href="http://railstutorial.org/contact">contact page</a>.
 </p>
